# aleph-cvm

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/aleph-attest-agent/: Cargo.toml
crates/aleph-attest-agent/src/: attestation.rs  main.rs  proxy.rs  secrets.rs  tls.rs
crates/aleph-attest-cli/: Cargo.toml
crates/aleph-attest-cli/src/: client.rs  main.rs  verify.rs
crates/aleph-compute-node/: Cargo.toml
crates/aleph-compute-node/src/: hugepages.rs  lib.rs  main.rs  numa.rs  persistence.rs  systemd.rs  verity.rs
crates/aleph-compute-node/src/grpc/: mod.rs  service.rs
crates/aleph-compute-node/src/network/: mod.rs  tap.rs
crates/aleph-compute-node/src/qemu/: args.rs  mod.rs  process.rs
crates/aleph-compute-node/src/vm/: lifecycle.rs  manager.rs
crates/aleph-compute-node/tests/: persistence_integration.rs  tier1_api.rs  tier2_attestation.rs
crates/aleph-compute-proto/: Cargo.toml  build.rs
crates/aleph-compute-proto/src/: lib.rs
crates/aleph-cvm-cli/: Cargo.toml
crates/aleph-cvm-cli/src/: main.rs
crates/aleph-network/: Cargo.toml
crates/aleph-network/src/: bridge.rs  lib.rs  manager.rs  ndp_proxy.rs  tap.rs  types.rs
crates/aleph-network/src/ipv4/: allocator.rs  mod.rs  port_forward.rs
crates/aleph-network/src/ipv6/: allocator.rs  mod.rs  range_allocator.rs
crates/aleph-network/src/nftables/: chains.rs  mod.rs  rules.rs
crates/aleph-node/: Cargo.toml
crates/aleph-node/src/: lib.rs  main.rs
crates/aleph-node/src/api/: health.rs  mod.rs  vms.rs
crates/aleph-node/src/network/: mod.rs  tap.rs
crates/aleph-node/src/qemu/: args.rs  process.rs  qmp.rs
crates/aleph-node/src/vm/: lifecycle.rs  manager.rs  mod.rs
crates/aleph-node/tests/: tier1_api.rs  tier2_attestation.rs
crates/aleph-node/tests/common/: mod.rs
crates/aleph-scheduler-agent/: Cargo.toml
crates/aleph-scheduler-agent/src/: adapter.rs  client.rs  lib.rs  main.rs
crates/aleph-scheduler-agent/src/aleph/: allocations.rs  messages.rs  mod.rs  volumes.rs
crates/aleph-tee/: Cargo.toml
crates/aleph-tee/src/: lib.rs  traits.rs  types.rs  x509.rs
crates/aleph-tee/src/sev_snp/: backend.rs  certs.rs  mod.rs  qemu.rs  report.rs  verify.rs
docs/plans/: 2026-03-04-dm-verity-design.md  2026-03-04-dm-verity-implementation.md  2026-03-04-vm-persistence-design.md  2026-03-04-vm-persistence-implementation.md  2026-03-05-encrypted-rootfs-design.md  2026-03-05-encrypted-rootfs-implementation.md  2026-03-06-compose-rootfs-phase1.md  2026-03-06-scheduler-agent-design.md  2026-03-06-scheduler-agent-sdk-split.md
docs/reviews/: 2026-03-05-codebase-review.md
nix/: compose-rootfs.nix  flake.nix  init.sh  initrd.nix  kernel.nix  ovmf.nix  rootfs.nix
nix/compose-demo/: docker-compose.yml
nix/fib-service/: Cargo.toml
nix/fib-service/src/: main.rs
proto/: compute.proto
scripts/: build-ovmf.sh  check-sev.sh  demo-compose.sh  demo-encrypted.sh  demo.sh  deploy-demo-compose.sh  deploy-demo-encrypted.sh  deploy-demo.sh  install-qemu.sh  setup-server.sh
