[workspace]
resolver = "2"
members = [
    "crates/aleph-tee",
    "crates/aleph-compute-node",
    "crates/aleph-compute-proto",
    "crates/aleph-network",
    "crates/aleph-scheduler-agent",
    "crates/aleph-attest-agent",
    "crates/aleph-attest-cli",
    "crates/aleph-cvm-cli",
]
exclude = [
    "nix/fib-service",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.metadata.crane]
name = "aleph-cvm"

[workspace.dependencies]
# TEE
sev = { version = "7", features = ["snp", "openssl"] }

# Crypto and TLS
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "ring"] }
x509-parser = "0.16"
x509-cert = "0.2"
der = "0.7"
const-oid = "0.9"
openssl = "0.10"
sha2 = "0.10"
p384 = { version = "0.13", features = ["ecdsa"] }
ring = "0.17"
hex = "0.4"
pem = "3"

# HTTP
actix-web = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "http2"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = "0.27"

# Async
tokio = { version = "1", features = ["full"] }

# QEMU
qapi = { version = "0.15", features = ["qmp"] }
qapi-qmp = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Errors and logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
ipnet = { version = "2", features = ["serde"] }
nftables = "0.5"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
tonic-reflection = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

# Tower (for gRPC UDS connector)
tower = "0.5"

# Crypto
hmac = "0.12"

# Random
rand = "0.9"

# Secret hygiene
zeroize = { version = "1", features = ["derive"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
