[package]
name = "aleph-attest-cli"
edition.workspace = true
version.workspace = true

[dependencies]
aleph-tee = { path = "../aleph-tee" }
rustls.workspace = true
x509-parser.workspace = true
reqwest.workspace = true
hyper-rustls.workspace = true
tokio.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ring.workspace = true
url = "2"
rand = "0.8"
sha2.workspace = true
