[package]
name = "aleph-compute-node"
edition.workspace = true
version.workspace = true

[[bin]]
name = "aleph-compute-node"
path = "src/main.rs"

[dependencies]
aleph-tee = { path = "../aleph-tee" }
aleph-compute-proto = { path = "../aleph-compute-proto" }
aleph-network = { path = "../aleph-network" }
ipnet.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
qapi.workspace = true
qapi-qmp.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tempfile.workspace = true
