[package]
name = "aleph-network"
edition.workspace = true
version.workspace = true

[dependencies]
ipnet.workspace = true
nftables.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
