[package]
name = "aleph-scheduler-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aleph_scheduler_agent"
path = "src/lib.rs"

[[bin]]
name = "aleph-scheduler-agent"
path = "src/main.rs"

[dependencies]
aleph-compute-proto = { path = "../aleph-compute-proto" }

# gRPC client
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true
tower.workspace = true
hyper-util.workspace = true

# Async
tokio.workspace = true

# HTTP (for volume downloads + allocation API)
actix-web.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto (allocation auth)
sha2.workspace = true
hex.workspace = true
hmac.workspace = true

# CLI
clap.workspace = true

# Errors and logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
